--- a/programmable-endpoint-demo.cabal
+++ b/programmable-endpoint-demo.cabal
@@ -18,7 +18,8 @@ cabal-version:       >=1.10
 
 executable programmable-endpoint-demo
   main-is:             Main.hs
-  -- other-modules:       
+  other-modules:       Services.TextOnly
+                       , Behaviors.AppCounter
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
                        , programmable-endpoint
