--- a/programmable-endpoint-demo.cabal
+++ b/programmable-endpoint-demo.cabal
@@ -23,6 +23,9 @@ executable programmable-endpoint-demo
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
                        , programmable-endpoint
+                       , snap-core
+                       , snap-blaze
+                       , blaze-html
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2 -threaded
