--- a/programmable-endpoint-demo.cabal
+++ b/programmable-endpoint-demo.cabal
@@ -29,6 +29,8 @@ executable programmable-endpoint-demo
                        , blaze-html
                        , text
                        , random
+                       , stm
+                       , async
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2 -threaded
