--- a/programmable-endpoint-demo.cabal
+++ b/programmable-endpoint-demo.cabal
@@ -19,6 +19,7 @@ cabal-version:       >=1.10
 executable programmable-endpoint-demo
   main-is:             Main.hs
   other-modules:       Services.TextOnly
+                       , Services.TextAndImages
                        , Behaviors.AppCounter
                        , Behaviors.SlowSurfer
   -- other-extensions:    
