--- a/programmable-endpoint-demo.cabal
+++ b/programmable-endpoint-demo.cabal
@@ -21,6 +21,7 @@ executable programmable-endpoint-demo
   other-modules:       Services.TextOnly
                        , Services.TextAndImages
                        , Behaviors.Counter
+                       , Behaviors.CountingBrowser
                        , Behaviors.BusySurfer
                        , Behaviors.SlowSurfer
   -- other-extensions:    
@@ -33,6 +34,7 @@ executable programmable-endpoint-demo
                        , random
                        , stm
                        , async
+                       , time
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2 -threaded
